// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Icon Animated Icons 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 jpPVhR"
  data-testid={null}
>
  <div
    className="sc-AxjAm cfcHtF"
    data-testid={null}
  >
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Icon Coloured Icon 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 jpPVhR"
  data-testid={null}
>
  <div
    className="sc-AxjAm cfcHtF"
    data-testid={null}
  >
    <span
      className="Icon__IconWrapper-xeqnbo-0 faAlRc"
      color="primaryDark"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 lhhCCK"
      color="successDark"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 eDWSpX"
      color="dangerDark"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Icon Default Icon 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 jpPVhR"
  data-testid={null}
>
  <div
    className="sc-AxjAm cfcHtF"
    data-testid={null}
  >
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Icon Icon Size 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 jpPVhR"
  data-testid={null}
>
  <div
    className="sc-AxjAm cfcHtF"
    data-testid={null}
  >
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Icon Inverted 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 jpPVhR"
  data-testid={null}
>
  <div
    className="sc-AxjAm cfcHtF"
    data-testid={null}
  >
    <div
      className="Box__BoxWrapper-jr1api-0 dgvDGD"
      data-testid={null}
    >
      <div
        className="sc-AxjAm cfcHtF"
        data-testid={null}
      >
        <span
          className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
        >
          <svg
            className="svg-inline--fa fa-undefined"
          />
        </span>
        <span
          className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
        >
          <svg
            className="svg-inline--fa fa-undefined"
          />
        </span>
        <span
          className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
        >
          <svg
            className="svg-inline--fa fa-undefined"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Icon Transforms and rotations 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 jpPVhR"
  data-testid={null}
>
  <div
    className="sc-AxjAm cfcHtF"
    data-testid={null}
  >
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <span
      className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Units/Icon Animated Icons 1`] = `
Array [
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
]
`;

exports[`Storyshots Units/Icon Coloured Icon 1`] = `
Array [
  <span
    className="Icon__IconWrapper-xeqnbo-0 faAlRc"
    color="primaryDark"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 lhhCCK"
    color="successDark"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 eDWSpX"
    color="dangerDark"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
]
`;

exports[`Storyshots Units/Icon Default Icon 1`] = `
Array [
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
]
`;

exports[`Storyshots Units/Icon Icon Size 1`] = `
Array [
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
]
`;

exports[`Storyshots Units/Icon Inverted Icons 1`] = `
Array [
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
]
`;

exports[`Storyshots Units/Icon Transforms And Rotations 1`] = `
Array [
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
  <span
    className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
  >
    <svg
      className="svg-inline--fa fa-undefined"
    />
  </span>,
]
`;
